Real use --work-directory option. Fix several typos. Don't use double quotes in config file (special symbol issue such as '@' in email).
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@57 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -23,12 +23,12 @@
 ## XMP tags
 #
 
-#$CiAdrCity 	= "Here Is Your City";
-#$CiAdrCtry 	= "Here Is Your Street";
-#$CiAdrExtadr 	= "Here Is Your Apartments";
-#$CiAdrPcode 	= "Here Is Your Zip Code";
-#$CiAdrRegion 	= "Here Is Your Region";
-#$CiEmailWork 	= "Here Is Your Email";
-#$CiTelWork 	= "Here Is Your Phone";
-#$CiUrlWork 	= "Here Is Your URL";
-#$City 		= "Here Is Your City";
+#$CiAdrCity 	= 'Here Is Your City';
+#$CiAdrCtry 	= 'Here Is Your Street';
+#$CiAdrExtadr 	= 'Here Is Your Apartments';
+#$CiAdrPcode 	= 'Here Is Your Zip Code';
+#$CiAdrRegion 	= 'Here Is Your Region';
+#$CiEmailWork 	= 'Here Is Your Email';
+#$CiTelWork 	= 'Here Is Your Phone';
+#$CiUrlWork 	= 'Here Is Your URL';
+#$City 		= 'Here Is Your City';
