README for windows users. Linguistiq fix for README.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@64 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -2,7 +2,10 @@
 ## the commentary to put to UserComment tag
 #
 
-#$COMMENTARY = <<__COMMENTARY__;
+#$NameTemplate  = '%Y%m%d%H%M%S';
+#$NamePrefix    = 'FileNamePrefix';
+
+#$COMMENTARY    = <<__COMMENTARY__;
 #
 #This image was shot by HERE-IS-YOUR-NAME for private purposes
 #and is copyrighted by him (me). The copyright is governed by
