Remove obsoleted examples from README. Remove mtime code (now is not working). Add template sequences description to rc-file.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@71 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -1,8 +1,28 @@
 #
-## the commentary to put to UserComment tag
+## Template is used for file name building while renaming.
 #
 
+# (default: %Y%m%d%H%M%S)
+# Interpreted sequences are:
+#	%%  a literal %
+#	%c  file order number in the processed file set
+#	%d  day of the month (01-31)
+#	%E  ExposureTime tag value if defined, otherwise E
+#	%F  FNumber tag value if defined, otherwise F
+#	%H  hour (00-23)
+#	%I  ISO tag value if defined, otherwise I
+#	%i  FileNumber tag if exists (otherwise, it'll be replaced by string "NA")
+#	%M  minute (00-59)
+#	%m  month (01-12)
+#	%S  second (00-60)
+#	%W  WhiteBalance tag value if defined, otherwise W
+#	%Y  year (1900, 1901, and so on)
+#	%y  last two digits of year (00..99)
 #$NameTemplate  = '%Y%m%d%H%M%S';
+
+#
+## the commentary to put to UserComment tag
+#
 
 #$COMMENTARY    = <<__COMMENTARY__;
 #
