Expand documentation accordingly to last code changes (template ideology, mtime option, and so on). Release as 0.16.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@77 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -2,7 +2,6 @@
 ## Template is used for file name building while renaming.
 #
 
-# (default: %Y%m%d%H%M%S)
 # Interpreted sequences are:
 #	%%  a literal %
 #	%c  file order number in the processed file set
@@ -46,7 +45,7 @@
 #
 
 #$CiAdrCity 	= 'Here Is Your City';
-#$CiAdrCtry 	= 'Here Is Your Street';
+#$CiAdrCtry 	= 'Here Is Your Country';
 #$CiAdrExtadr 	= 'Here Is Your Apartments';
 #$CiAdrPcode 	= 'Here Is Your Zip Code';
 #$CiAdrRegion 	= 'Here Is Your Region';
