Use --no-mtime as opposite to --mtime. Add $setMtime to config file. (Needs to be checked)
Minor changes in the documentation.


git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@94 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -1,3 +1,7 @@
+# Process files with or without mtime modification. This option is
+# overriding by command line keys --mtime or --no-mtime.
+#$setMtime = 0;
+
 #
 ## Template is used for file name building while renaming.
 #
