--- a/renrot.rc
+++ b/renrot.rc
@@ -56,3 +56,10 @@
 #$CiEmailWork 	= 'Here Is Your Email';
 #$CiTelWork 	= 'Here Is Your Phone';
 #$CiUrlWork 	= 'Here Is Your URL';
+
+#
+## What will be put to the EXIF tag [EXIF] Software default is
+#
+$Software = sprintf("ExifTool v.%s; renrot v.%s", $Image::ExifTool::VERSION, $VERSION);
+
+
