so called "delta" aggregation mode had been added. new options added: --aggr-delta, --aggr-dir and --aggr-dumb/--noaggr-dumb. TODO and renrot.rc are edited
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@102 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -39,7 +39,9 @@
 #	%y  last two digits of year (00..99)
 #
 #$AggrTemplate  = '%Y%m%d%H';
-
+#$AggrDelta = 900;	
+#$AggrDumb = 1;
+#$AggrDir = "DIR";
 #
 ## the commentary to put to UserComment tag
 #
