Change --files to --file, --rotate to --rotate-angle and --ext to --extension. Revert back --no-rotate and --no-rename. Exclude single quotas from README examples part due to undesired interpretation in cmd.exe. Also, put note to README.Windows. Add no warranty part to README. Correct low case makeup. Always writting Software tag. Release as 0.18.3.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@111 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -9,7 +9,7 @@
 #
 
 # Process files with or without mtime modification. This option is
-# overriden by CLI options --mtime or --nomtime.
+# overriden by CLI options --mtime or --no-mtime.
 #$Mtime = 1;
 
 
@@ -47,7 +47,7 @@
 #	%S  second (00-59)
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
-#$AggrTemplate  = '%Y%m%d%H';
+#$AggrTemplate  = '%Y%m%d';
 
 #$AggrDelta = 900;
 #$AggrDumb = 1;
@@ -86,11 +86,4 @@
 #$CiEmailWork 	= 'Here Is Your Email';
 #$CiTelWork 	= 'Here Is Your Phone';
 #$CiUrlWork 	= 'Here Is Your URL';
-
-
-#
-## Whether versions of tools will be put to the EXIF tag [EXIF] Software.
-#
-
-#$Software = 1;
 
