Inject config in new style.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@139 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -1,10 +1,10 @@
 #
 ## This is configuration file for RenRot. See commented variables for defaults.
 #
+# Note: all options except 'tag' prefixed is overriden by CLI.
 
-# Process files with or without mtime modification. This option is overriden
-# by CLI options --mtime or --no-mtime.
-#$Mtime		= 1;
+# Process files with or without mtime modification.
+#mtime			= yes
 
 # Template is used for file name building while renaming. Interpreted
 # sequences are:
@@ -22,7 +22,7 @@
 #	%W  WhiteBalance tag value if defined
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
-#$NameTemplate	= '%Y%m%d%H%M%S';
+#name template		= '%Y%m%d%H%M%S'
 
 # Template used for file aggregation. Interpreted sequences are:
 #	%d  day of the month (01-31)
@@ -32,39 +32,30 @@
 #	%S  second (00-59)
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
-#$AggrTemplate	= '%Y%m%d';
+#aggregation template	= '%Y%m%d'
 
 # Delta interval in seconds for simple aggregation.
-#$AggrDelta	= 900;
+#aggregation delta	= 900
 
-#$AggrDumb	= 1;
-#$AggrDir	= 'DIR';
+# Dumb aggregation mode.
+# (if true, no file will be moved or directory will be created)
+#aggregation dumb	= yes
 
+# Counterless aggregation directory name.
+#aggregation directory	= 'DIR'
+
+# The commentary filename to put to Comment tag.
+#comment file		= '/etc/renrot.comment'
 
 # The commentary to put to UserComment tag.
-#$COMMENTARY	= <<__COMMENTARY__;
-#This image was shot by HERE-IS-YOUR-NAME for private purposes
-#and is copyrighted by him (me). The copyright is governed by
-#copyright laws. This image cannot be copied in any form
-#without prior written permission from HERE-IS-YOUR-NAME.
-#However, this copyright notice gives you permission to link
-#to the image.
-#
-#This image is NOT a public domain!!! Unauthorized usage
-#definetely PROHIBITED!
-#
-#You can use this image anyhow ONLY if you have received the
-#assignment of permition to use from HERE-IS-YOUR-NAME.
-#__COMMENTARY__
-
+#Tag UserComment		= 'User commentary here'
 
 # Personal information could be set to XMP tags. Default is undefined.
-#$CiAdrCity 	= 'Here Is Your City';
-#$CiAdrCtry 	= 'Here Is Your Country';
-#$CiAdrExtadr 	= 'Here Is Your Apartments';
-#$CiAdrPcode 	= 'Here Is Your Zip Code';
-#$CiAdrRegion 	= 'Here Is Your Region';
-#$CiEmailWork 	= 'Here Is Your Email';
-#$CiTelWork 	= 'Here Is Your Phone';
-#$CiUrlWork 	= 'Here Is Your URL';
-
+#Tag CiAdrCity		= 'Here Is Your City'
+#Tag CiAdrCtry		= 'Here Is Your Country'
+#Tag CiAdrExtadr		= 'Here Is Your Apartments'
+#Tag CiAdrPcode		= 'Here Is Your Zip Code'
+#Tag CiAdrRegion		= 'Here Is Your Region'
+#Tag CiEmailWork		= 'Here Is Your Email'
+#Tag CiTelWork		= 'Here Is Your Phone'
+#Tag CiUrlWork		= 'Here Is Your URL'
