Fix NEWS spelling according to FreshMeat announce. New configuration file style is described in README. Use new configuration file style by default. Add some needed comments to renrot.rc. Revert check for configuration file presence in parseConfig().
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@144 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -4,7 +4,7 @@
 # Note: all options except 'tag' prefixed is overriden by CLI.
 
 # Process files with or without mtime modification.
-#mtime			= yes
+#mtime			= Yes
 
 # Template is used for file name building while renaming. Interpreted
 # sequences are:
@@ -38,16 +38,17 @@
 #aggregation delta	= 900
 
 # Dumb aggregation mode.
-# (if true, no file will be moved or directory will be created)
-#aggregation dumb	= yes
+# (If true, no file will be moved or directory will be created)
+#aggregation dumb	= Yes
 
 # Counterless aggregation directory name.
 #aggregation directory	= 'DIR'
 
-# The commentary filename to put to Comment tag.
+# The commentary filename to put to Comment tag. Default is undefined.
 #comment file		= '/etc/renrot.comment'
 
-# The commentary to put to UserComment tag.
+# The commentary to put to UserComment tag. Default is undefined.
+# (This option could be overriden by --user-comment parameter)
 #Tag UserComment	= 'User commentary here'
 
 # Personal information could be set to XMP tags. Default is undefined.
