Implement start and step counter values (options --counter-start and --counter-step). Use fixed field or not when counter is printed (--counter-fixed-field, is 'on' by default). Inject aggregation mode option to configuration file and command line. Deprecate --aggr switcher and 'delta' keyword in --aggr-template, use --aggr-mode='none', 'delta' or 'template' instead.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@149 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -1,7 +1,7 @@
 #
 ## This is configuration file for RenRot. See commented variables for defaults.
 #
-# Note: all options except 'tag' prefixed is overriden by CLI.
+# Note: options except 'tag' prefixed can be overriden by CLI.
 
 # Process files with or without mtime modification.
 #mtime			= Yes
@@ -23,6 +23,9 @@
 #	%Y  year (1900, 1901, and so on)
 #	%y  last two digits of year (00..99)
 #name template		= '%Y%m%d%H%M%S'
+
+# Aggregation mode. Possible values are: none, delta or template
+#aggregation mode	= 'none'
 
 # Template used for file aggregation. Interpreted sequences are:
 #	%d  day of the month (01-31)
