Refactoring (counterprefixsize -> counterSize,              anglesuffix -> angleSuffix,              renameFile() -> renameImg()). Split MAIN() to main part, renRotProcess() and renameFile(). No reset incorrect aggregation template, only ignore it with warning and error. Change default aggregation directory value to 'Images'. Add trim variable to the configuration file. Group --mtime/--no-mtime and --trim/--no-trim in manual. Expand CONFIG section by trim and aggregation mode descriptions.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@158 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -24,6 +24,9 @@
 #	%y  last two digits of year (00..99)
 #name template		= '%Y%m%d%H%M%S'
 
+# Trimming rotated images when using jpegtran
+#trim			= Yes
+
 # Aggregation mode. Possible values are: none, delta or template
 #aggregation mode	= 'none'
 
@@ -41,7 +44,7 @@
 #aggregation delta	= 900
 
 # Counterless aggregation directory name.
-#aggregation directory	= 'DIR'
+#aggregation directory	= 'Images'
 
 # The commentary filename to put to Comment tag. Default is undefined.
 #comment file		= '/etc/renrot.comment'
