TagFile configuration option was added. Any tag could be filled by file content. "comment file" configuration variable are deprecated by new TagFile. Minor changes at TAGS section.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@181 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -47,7 +47,7 @@
 #aggregation directory	= 'Images'
 
 # The commentary filename to put to Comment tag. Default is undefined.
-#comment file		= '/etc/renrot.comment'
+#TagFile = Comment: '/etc/renrot.comment'
 
 # The commentary to put to UserComment tag. Default is undefined.
 # (This option could be overriden by --user-comment parameter)
