Virtualization of aggregation has been implemented. POD, README, renrot.rc are edited.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@182 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/renrot.rc
+++ b/renrot.rc
@@ -46,6 +46,13 @@
 # Counterless aggregation directory name.
 #aggregation directory	= 'Images'
 
+# To run virtualized aggregation (see documentation)
+#aggregation virtual	= No
+
+# Default virtual aggregation directory.
+# For now it is imposible to set anything except 'Images.Links.Directory'
+#aggregation virtual directory = 'Images.Links.Directory'
+
 # The commentary filename to put to Comment tag. Default is undefined.
 #TagFile = Comment: '/etc/renrot.comment'
 
