--- a/renrot.rc
+++ b/renrot.rc
@@ -54,11 +54,11 @@
 #aggregation virtual directory = 'Images.Links.Directory'
 
 # The commentary filename to put to Comment tag. Default is undefined.
-#TagFile = Comment: '/etc/renrot.comment'
+#TagFile = Comment: /etc/renrot/comment.tag
 
 # The file containing the copyright, if you prefer the copyright as 
 # string, than define it as Tag
-#TagFile = Copyright [EXIF]: './copyright'
+#TagFile = Copyright [EXIF]: /etc/renrot/copyright.tag
 
 # The commentary to put to UserComment tag. Default is undefined.
 # (This option could be overriden by --user-comment parameter)
@@ -77,8 +77,9 @@
 #Tag = Artist [EXIF]: 'Here Is Artist'
 #Tag = ImageDescription [EXIF]: 'Here Is Image description'
 
-# GPS Tags (for more info, consult http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/GPS.html)
-# sample is given for Donetsk,UA (the home city of the authors)
+# GPS Tags.
+# (For more info, consult http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/GPS.html)
+# Following sample is given for Donetsk, Ukraine (the home city of the authors):
 #Tag = GPSLatitudeRef [GPS]: 'N'	# N for Noth and S for South
 #Tag = GPSLatitude [GPS]: '48 00 00'	# in form "%d %.2f %.2f"
 #Tag = GPSLongitudeRef [GPS]: 'E'	# E for East and W for West
@@ -87,6 +88,7 @@
 #Tag = GPSDateStamp [GPS]: ''		# in form "YYYY:MM:DD"
 #Tag = GPSDateStamp [GPS]: ''		# in form "HH MM SS"
 
-
 # You can add any known tag here in the following format:
 #Tag = KnownTagName [TagGroup]: 'Value of the tag'
+# Or from a file:
+#TagFile = KnownTagName [TagGroup]: /etc/renrot/knowntagname.tag
