tag GPSAltitudeRef added to etc/tags.conf
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@205 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/tags.conf
+++ b/etc/tags.conf
@@ -6,7 +6,7 @@
 # The commentary filename to put to Comment tag. Default is undefined.
 #TagFile = Comment: /etc/renrot/comment.tag
 
-# The file containing the copyright, if you prefer the copyright as 
+# The file containing the copyright, if you prefer the copyright as
 # string, than define it as Tag
 #TagFile = Copyright [EXIF]: /etc/renrot/copyright.tag
 
@@ -34,7 +34,8 @@
 #Tag = GPSLatitude [GPS]: '48 00 00'	# in form "%d %.2f %.2f"
 #Tag = GPSLongitudeRef [GPS]: 'E'	# E for East and W for West
 #Tag = GPSLongitude [GPS]: '37 45 00'	# in form "%d %.2f %.2f"
-#Tag = GPSAltitude [GPS]: '300'		# in form "%d"
+#Tag = GPSAltitudeRef [GPS]: 'above'    # above for Above, bellow for Bellow
+#Tag = GPSAltitude [GPS]: '225'		# in form "%d"
 #Tag = GPSDateStamp [GPS]: ''		# in form "YYYY:MM:DD"
 #Tag = GPSDateStamp [GPS]: ''		# in form "HH MM SS"
 
