keywordizer() added, managed via CLI and config file options --keywordize and --keyword-file.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@218 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -3,6 +3,9 @@
 #
 # Note: These variables can be overriden by command line options.
 
+# Whether to keywordize the files (see option --keywordize description for details)
+#keywordize		= No
+
 # Process files with or without mtime modification.
 #mtime			= Yes
 
