Use 'keywords file' in configuration for the default keywords source. Optimize keywordizer related code.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@220 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -6,6 +6,9 @@
 # Whether to keywordize the files (see option --keywordize description for details)
 #keywordize		= No
 
+# Default file name with keyword set
+#keywords file		= '.keywords'
+
 # Process files with or without mtime modification.
 #mtime			= Yes
 
