Tags initialization moved from tagWriter() to the renRotProcess().
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@224 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -6,6 +6,9 @@
 # Whether to keywordize the files (see option --keywordize description for details)
 #keywordize		= No
 
+# Whether to replace existing keywords with new ones, or add new to existent ones
+#keywords replace	= No
+
 # Default file name with keyword set
 #keywords file		= '.keywords'
 
