--test-speed -> --test-use-ipc (and 'test speed' -> 'test use ipc'). Split rotateThumbnail() to its own, rotateByJpegtran(), and thumbWriter().
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@232 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -65,5 +65,5 @@
 # Include tags information.
 #include		= '/etc/renrot/tags.conf'
 
-# Test piper speed 
-# test speed		= No
+# Test: Use IPC for intercommunication with external command
+#test use IPC		= No
