Template sequence "%o" was added.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@237 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -27,6 +27,8 @@
 #	%i  FileNumber tag if exists (otherwise, it'll be replaced by string "NA")
 #	%M  minute (00-59)
 #	%m  month (01-12)
+#	%n  old file name
+#	%o  original file name
 #	%S  second (00-59)
 #	%W  WhiteBalance tag value if defined
 #	%Y  year (1900, 1901, and so on)
