Template sequence "%O" was added.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@240 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -28,6 +28,7 @@
 #	%M  minute (00-59)
 #	%m  month (01-12)
 #	%n  old file name
+#	%O  numeric part of the original file name
 #	%o  original file name
 #	%S  second (00-59)
 #	%W  WhiteBalance tag value if defined
