Remove --color. Add 'use color' to configuration file.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@258 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/colors.conf
+++ b/etc/colors.conf
@@ -3,6 +3,9 @@
 #
 # Note: These variables can be overriden by command line options.
 
+# Use colorized output. This NOT works under Win32.
+#Use color	= No
+
 # Setup colors for different facilities
 
 #Color = debug: 'green'
