Now "use color = Yes" is default.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@262 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -75,3 +75,5 @@
 # Use IPC for execution external command
 #use IPC		= No
 
+# Use colorized output (not works under MS Windows)
+#use color		= Yes
