Config option 'contact sheet tile' added.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@296 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -77,3 +77,9 @@
 
 # Use colorized output (not works under MS Windows)
 #use color		= Yes
+
+#
+## Contact Sheet Generator Section
+#
+#contact sheet		= No
+#contact sheet tile	= '7x5'
