Config options 'contact sheet title' and 'contact sheet file' added.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@297 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -83,3 +83,5 @@
 #
 #contact sheet		= No
 #contact sheet tile	= '7x5'
+#contact sheet title	= 'Montage Test Via Image::Magick'
+#contact sheet file	= 'cs'
