Config option 'contact sheet dir' added.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@298 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -85,3 +85,4 @@
 #contact sheet tile	= '7x5'
 #contact sheet title	= 'Montage Test Via Image::Magick'
 #contact sheet file	= 'cs'
+#contact sheet dir	= 'CS.TMP'
