Variable for homepage of the project was added.
Options 'contact sheet title'
	'contact sheet background'
	'contact sheet bordercolor'
	'contact sheet mattecolor'
	'contact sheet font'
	'contact sheet label'
	'contact sheet frame'
	'contact sheet pointsize'
	'contact sheet shadow'
	were moved to the config file.

TODO file edited.

renrot.conf file edited.


git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@302 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -80,9 +80,31 @@
 
 #
 ## Contact Sheet Generator Section
+## -------------------------------
 #
-#contact sheet		= No
-#contact sheet tile	= '7x5'
-#contact sheet title	= 'Montage Test Via Image::Magick'
-#contact sheet file	= 'cs'
-#contact sheet dir	= 'CS.TMP'
+ 
+#contact sheet			= No
+#contact sheet dir		= 'CS.TMP' # temp directory
+#contact sheet file		= 'cs'
+
+# look ImageMagick documentation for montage options:
+# montage --help
+# http://www.imagemagick.org/
+#
+#contact sheet tile		= '7x5'
+#contact sheet title		= 'Default Contact Sheet Title'
+#contact sheet background 	= 'FFF' # do not put "#", it'll be concatenated
+#contact sheet bordercolor	= 'DDD' # do not put "#", it'll be concatenated
+#contact sheet mattecolor	= 'CCC' # do not put "#", it'll be concatenated
+
+# 1. to list the TrueType and Postscript Type 1 fonts use 'convert -list type'
+# 2. as well you can use the font names listed by 'xlsfonts'
+# 3. and you can specify the full pathname to the actual font file itself.
+# 4. to know info about the font you can use 'display fontname.ext'
+#
+#contact sheet font		= 'Helvetica'
+
+#contact sheet label		= '%t'
+#contact sheet frame		= '3'
+#contact sheet pointsize	= '11'
+#contact sheet shadow		= Yes
