Option 'contact sheet fill' added to config and CLI.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@303 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -93,9 +93,12 @@
 #
 #contact sheet tile		= '7x5'
 #contact sheet title		= 'Default Contact Sheet Title'
+
+# use only RGB triplets for color
 #contact sheet background 	= 'FFF' # do not put "#", it'll be concatenated
 #contact sheet bordercolor	= 'DDD' # do not put "#", it'll be concatenated
 #contact sheet mattecolor	= 'CCC' # do not put "#", it'll be concatenated
+#contact sheet fill		= '000' # do not put "#", it'll be concatenated
 
 # 1. to list the TrueType and Postscript Type 1 fonts use 'convert -list type'
 # 2. as well you can use the font names listed by 'xlsfonts'
