renrot.conf edited
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@312 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/etc/renrot.conf
+++ b/etc/renrot.conf
@@ -82,7 +82,7 @@
 ## Contact Sheet Generator Section
 ## -------------------------------
 #
- 
+
 #contact sheet			= No
 #contact sheet dir		= 'CS.TMP' # temp directory
 #contact sheet file		= 'cs'
@@ -94,20 +94,29 @@
 #contact sheet tile		= '7x5'
 #contact sheet title		= 'Default Contact Sheet Title'
 
-# use only RGB triplets for color
-#contact sheet background 	= 'FFF' # do not put "#", it'll be concatenated
-#contact sheet bordercolor	= 'DDD' # do not put "#", it'll be concatenated
-#contact sheet mattecolor	= 'CCC' # do not put "#", it'll be concatenated
-#contact sheet fill		= '000' # do not put "#", it'll be concatenated
+# to list predefined color names use 'convert -list color'
+# do not put "#", it'll be concatenated automatically
+#contact sheet background 	= 'FFF'
+#contact sheet bordercolor	= 'DDD'
+#contact sheet mattecolor	= 'CCC'
+#contact sheet fill		= '000'
+#contact sheet thm fill		= 'gray34'
+#contact sheet thm grad fr	= 'FFFFFF'
+#contact sheet thm grad to	= '909090'
+
+
 
 # 1. to list the TrueType and Postscript Type 1 fonts use 'convert -list type'
 # 2. as well you can use the font names listed by 'xlsfonts'
 # 3. and you can specify the full pathname to the actual font file itself.
 # 4. to know info about the font you can use 'display fontname.ext'
 #
-#contact sheet font		= 'Helvetica'
+#contact sheet font		= 'Helvetica' # present if ghostscript installed
+#contact sheet thm font		= 'Helvetica' # present if ghostscript installed
 
 #contact sheet label		= '%t'
 #contact sheet frame		= '3'
 #contact sheet pointsize	= '11'
 #contact sheet shadow		= Yes
+
+#contact sheet thm text		= 'thumbnail\n\nNA'
